ros/servo controller/ros2_ws/log/build_2024-06-05_09-02-28/webcam_streamer_package/stderr.log
  File "/home/ubuntu/ros2_ws/install/webcam_streamer_package/lib/python3.10/site-packages/webcam_streamer_package/webcam_streamer_node.py", line 37
    compressed_data = self.compress_image(pillow_Image.fromarray(frame)
                                         ^
SyntaxError: '(' was never closed

